<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/top_news_nav"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/top_news"
        android:visible="true" />
    <item
        android:id="@+id/sports_news_nav"
        android:icon="@drawable/grid"
        android:title="@string/nav_sports"
        android:visible="true" />
    <item
        android:id="@+id/tech_news_nav"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/technology"
        android:visible="true" />
    <item

        android:id="@+id/world_news_nav"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/nav_world"
        android:visible="true" />
</menu>