<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_nav"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/nav_home"
        android:visible="true" />
    <item
        android:id="@+id/dep_nav"
        android:icon="@drawable/grid"
        android:title="@string/department"
        android:visible="true" />
    <item
        android:id="@+id/fav_nav"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/fav"
        android:visible="true" />
    <item
        android:id="@+id/settings_nav"

        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/action_settings"
        android:visible="true" />
</menu>