<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <FrameLayout
        android:id="@+id/setting_frag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:drawablePadding="15dp"
                android:lineSpacingExtra="2sp"
                android:shadowColor="@android:color/black"
                android:text="@string/action_settings"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="36sp"
                app:fontFamily="@font/monadi" />

            <Button
                android:id="@+id/btn_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:background="@android:color/background_light"
                android:drawableStart="@drawable/global"
                android:drawablePadding="10dp"
                android:gravity="fill"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/change_language_title"
                android:textAllCaps="false"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btn_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@android:color/background_light"
                android:drawableStart="@drawable/star"
                android:drawablePadding="10dp"
                android:gravity="fill"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/rate_app"
                android:textAllCaps="false"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@android:color/background_light"
                android:drawableStart="@drawable/ic_baseline_share_24"
                android:drawablePadding="10dp"
                android:gravity="fill"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/share_app"
                android:textAllCaps="false"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btn_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@android:color/background_light"
                android:drawableStart="@drawable/mail"
                android:drawablePadding="10dp"
                android:gravity="fill"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/contact"
                android:textAllCaps="false"
                android:textSize="22sp" />
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>